--- a/prenota/index.html
+++ b/prenota/index.html
@@ -331,17 +331,14 @@
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
 <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-    <p class="lead extra-space-modal" id="modalLead2">Vuoi cancellare la prenotazione?</p>
-    <p id="modalText"></p>
-        <div class="row extra-space" style="margin-bottom:5%">
-            <div class="large-6 columns">
-                <a role="button" id="no" class="button small right">No, non cancellare</a>
-            </div>
-            <div class="large-6 columns">
-                <a role="button" id="yes" class="button small left">Sì, cancellaaa</a>
+        <div class="row">
+            <div class="small-12 medium-12 large-12 columns extra-space">
+                <p class="lead extra-space-modal" id="modalLead2">Vuoi cancellare la prenotazione?</p>
+                <a role="button" id="no" class="button small right" style="margin-top: 5px;">No, non cancellare</a>
+                <a role="button" id="yes" class="button small left" style="margin-top: 5px;">Sì, cancella</a>
             </div>
         </div>
-  <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
+        <a class="close-reveal-modal" aria-label="Close" id="close-modal">&#215;</a>
 </div>
 </body>
 </html>
