--- a/prenota/consulta.html
+++ b/prenota/consulta.html
@@ -98,7 +98,7 @@
             <div class="small-12 medium-6 large-6 columns">
                 <a role="button" id="cancel" class="button small right">Cancella</a>
                 <a role="button" id="modify" class="button small left">Modifica</a>
-                <a role="button" id="new" class="button small left" href="./">Fai una nuova prenotazione</a>
+                <a role="button" id="new" class="button small right" href="./">Fai una nuova prenotazione</a>
             <!-- <div class="medium-6 large-6 columns">
                 <a style="margin-top: 15px;" role="button" id="cancel" class="button">Cancella</a>
             </div>
@@ -194,7 +194,7 @@
 <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
     <p id="modalText"></p>
         <div class="row">
-            <div class="small-12 medium-12 large-12 columns extra-space">
+            <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
                 <p class="lead" id="modalLead">Vuoi cancellare la prenotazione?</p>
                 <a role="button" id="no" class="button small right" style="margin-top: 5px;">No, non cancellare</a>
                 <a role="button" id="yes" class="button small left" style="margin-top: 5px;">Sì, cancella</a>
