--- a/prenota/index.html
+++ b/prenota/index.html
@@ -325,14 +325,16 @@
   <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div> -->
 <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-    <h1></h1>
-    <h2 id="modalTitle" class="extra-space-modal"></h2>
-    <p class="lead" id="modalLead"></p>
-    <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+    <div class="row">
+        <div class="small-12 medium-12 large-12 columns" style="margin-bottom:10%">
+            <p class="lead extra-space-modal" id="modalLead">In questa data siamo al completo.</p>
+            <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+        </div>
+    </div>
 </div>
 <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
-            <div class="small-12 medium-12 large-12 columns extra-space">
+            <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
                 <p class="lead extra-space-modal" id="modalLead2">Vuoi cancellare la prenotazione?</p>
                 <a role="button" id="no" class="button small right" style="margin-top: 5px;">No, non cancellare</a>
                 <a role="button" id="yes" class="button small left" style="margin-top: 5px;">Sì, cancella</a>
