--- a/prenota/index.html
+++ b/prenota/index.html
@@ -326,7 +326,7 @@
 </div> -->
 <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
     <div class="row">
-        <div class="small-12 medium-12 large-12 columns" style="margin-bottom:10%">
+        <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
             <p class="lead extra-space-modal" id="modalLead">In questa data siamo al completo.</p>
             <a class="close-reveal-modal" aria-label="Close">&#215;</a>
         </div>
