--- a/prenota/index.html
+++ b/prenota/index.html
@@ -335,7 +335,7 @@
 <div id="myModal2" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
         <div class="row">
             <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:10%">
-                <p class="lead extra-space-modal" id="modalLead2">Vuoi cancellare la prenotazione?</p>
+                <p class="lead" id="modalLead2">Vuoi cancellare la prenotazione?</p>
                 <a role="button" id="no" class="button small right" style="margin-top: 5px;">No, non cancellare</a>
                 <a role="button" id="yes" class="button small left" style="margin-top: 5px;">Sì, cancella</a>
             </div>
