--- a/prenota/index.html
+++ b/prenota/index.html
@@ -67,7 +67,7 @@
             <br>
         </div>
     </header>
-    <div id="loading" hidden><br/><br/><div style="padding-top:25%">Ricerco disponibilità.</div></div>
+    <div id="loading" hidden><br/><br/><div style="padding-top:25%">Ricerco disponibilità</div></div>
     <div class="row" id="notesDiv" hidden>
         <div class="small-6 medium-4 columns" id="innerNotesDiv_" >
             <div>
