miglioria testo soggioloni

--- a/prenota/index.html
+++ b/prenota/index.html
@@ -137,13 +137,17 @@
     <div class="panel-home-2n form">
     <form id="form">
         <div class="row">
+            <div class="small-12 medium-12 large-12 columns">
+                 <h6>includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 1 seggiolone seleziona 5.</h6>
+                <br>
+            </div>
             <div class="small-6 medium-3 columns ">
                 <label>Quale giorno*
                     <input tabindex="5" id="from" type="text" name="LNAME" class="required error" placeholder="Seleziona Giorno" readonly/>
                 </label>
             </div>
             <div class="small-6 medium-3 columns end">
-                <label><span data-tooltip aria-haspopup="true" class="has-tip" title="includi in 'Quante persone' anche eventuali seggioloni. Esempio 8 persone e 1 seggiolone seleziona 9">Quante persone*</span>
+                <label>Quante persone*
                     <select name="MMERGE4" class="error" id="quantity" disabled>
                         <option value="">Seleziona Numero</option>
                     </select>
