--- a/prenota/index.html
+++ b/prenota/index.html
@@ -135,103 +135,107 @@
       </div>
     </div>
     <div class="panel-home-2n form">
-    <form id="form">
-        <div class="row">
-            <div class="small-12 medium-12 large-12 columns">
-                 <h6>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: per 4 persone e 2 seggioloni seleziona 6.</h6>
-                 <h6 class="extra-space-hero"><strong>* </strong> Campo obbligatorio.</h6>
+        <form id="form">
+            <div class="row">
+                <div class="small-12 medium-12 large-12 columns">
+                     <h6>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni seleziona 6.</h6>
+                     <h6 class><strong>* </strong> Indica un campo obbligatorio.</h6>
+                </div>
+                <div class="small-12 medium-12 columns"><hr></div>
             </div>
-            <span class="extra-space"><hr></span>
-            <div class="small-6 medium-3 columns ">
-                <label><strong>Quale giorno*</strong>
-                    <input tabindex="5" id="from" type="text" name="LNAME" class="required error" placeholder="Seleziona Giorno" readonly/>
-                </label>
+
+            <div class="row">
+                <div class="small-6 medium-3 columns ">
+                    <label><strong>Quale giorno*</strong>
+                        <input tabindex="5" id="from" type="text" name="LNAME" class="required error" placeholder="Seleziona Giorno" readonly/>
+                    </label>
+                </div>
+                <div class="small-6 medium-3 columns end">
+                    <label><strong>Quante persone*</strong>
+                        <select name="MMERGE4" class="error" id="quantity" disabled>
+                            <option value="">Seleziona Numero</option>
+                        </select>
+                    </label>
+                </div>
             </div>
-            <div class="small-6 medium-3 columns end">
-                <label><strong>Quante persone*</strong>
-                    <select name="MMERGE4" class="error" id="quantity" disabled>
-                        <option value="">Seleziona Numero</option>
-                    </select>
-                </label>
+            <div class="row extra-space-hero">
+                <div class="small-12 medium-6 columns end">
+                    <label><strong>Quale turno*</strong>
+                <div id="shiftGridL"></div>
+                    </label>
+                    <ul class="small-block-grid-2  extra-space-turno error" id="shiftGrid">
+                        <li class="bShift"><a class="small button disabled">19.00-21.00</a></li>
+                        <li class="bShift"><a class="small button disabled">19.30-21.30</a></li>
+                        <li class="bShift"><a class="small button disabled">20.00-22.00</a></li>
+                        <li class="bShift"><a class="small button disabled">20.30-22.30</a></li>
+                        <li class="bShift"><a class="small button disabled">21.00-23.00</a></li>
+                        <li class="bShift"><a class="small button disabled">21.30-23.00</a></li>
+                    </ul>
+                    <h6>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</h6>
+                </div>
+                <div class="small-12 medium-12 columns"><hr></div>
             </div>
-        </div>
-        <div class="row extra-space-hero">
-            <div class="small-12 medium-6 columns end">
-                <label><strong>Quale turno*</strong>
-            <div id="shiftGridL"></div>
-                </label>
-                <ul class="small-block-grid-2  extra-space-turno error" id="shiftGrid">
-                    <li class="bShift"><a class="small button disabled">19.00-21.00</a></li>
-                    <li class="bShift"><a class="small button disabled">19.30-21.30</a></li>
-                    <li class="bShift"><a class="small button disabled">20.00-22.00</a></li>
-                    <li class="bShift"><a class="small button disabled">20.30-22.30</a></li>
-                    <li class="bShift"><a class="small button disabled">21.00-23.00</a></li>
-                    <li class="bShift"><a class="small button disabled">21.30-23.00</a></li>
-                </ul>
-                <h6>Turno: orario d'arrivo-orario in cui bisogna lasciare il tavolo</h6>
+            <div class="row">
+                <div class="small-12 medium-6 columns end">
+                    <label><strong>Note</strong>
+                        <textarea maxlength="200" id="obs" placeholder="Intolleranze, accesso con sedia a rotelle, ..."></textarea>
+                    </label>
+                </div>
             </div>
-            <span class="extra-space"><hr></span>
-        </div>
-        <div class="row">
-            <div class="small-12 medium-6 columns end">
-                <label><strong>Note</strong>
-                    <textarea maxlength="200" id="obs" placeholder="Intolleranze, accesso con sedia a rotelle, ..."></textarea>
-                </label>
+            <div class="row">
+                <div class="small-9 medium-4 columns end ">
+                    <label><strong>Ho bisogno di seggioloni</strong>
+                        <select name="MMERGE4" class="" id="seggiolini">
+                            <option value="0">No</option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </label>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="small-9 medium-4 columns end extra-space-hero">
-                <label><strong>Ho bisogno di seggioloni</strong>
-                    <select name="MMERGE4" class="" id="seggiolini">
-                        <option value="0">No</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3">3</option>
-                    </select>
-                </label>
+            <div class="row">
+                <div class="small-9 medium-6 columns end">
+                    <input id="cani" type="checkbox"><label for="checkbox1">Ho uno o più cani</label>
+                </div>
+                <div class="small-12 medium-12 columns"><hr></div>
             </div>
-        </div>
-        <div class="row">
-            <div class="small-9 medium-6 columns end extra-space-hero">
-                <input id="cani" type="checkbox"><label for="checkbox1">Ho uno o più cani</label>
+            <div class="row">
+                <div class="small-6 medium-4 large-4 columns">
+                    <label><strong>Nome*</strong>
+                        <input type="text" class="required error" id="name" placeholder="Nome" maxlength="20"/>
+                    </label>
+                </div>
+                <div class="small-6 medium-4 large-4 columns end">
+                    <label><strong>Cognome*</strong>
+                        <input type="text" class="required error" id="surname" placeholder="Cognome" maxlength="20"/>
+                    </label>
+                </div>
             </div>
-            <span class="extra-space"><br><br><hr></span>
-        </div>
-        <div class="row">
-            <div class="small-6 medium-4 large-4 columns">
-                <label><strong>Nome*</strong>
-                    <input type="text" class="required error" id="name" placeholder="Nome" maxlength="20"/>
-                </label>
+            <div class="row">
+                <div class="small-12  medium-5 large-5 columns extra-space-hero">
+                    <label><strong>Email*</strong>
+                        <input type="email" class="required error email" id="email" placeholder="esempio@esempio.it" maxlength="200"/>
+                      </label>
+                </div>
+                <div class="small-6  medium-3 large-3 columns end extra-space-hero">
+                    <label><strong>Telefono*</strong>
+                        <input type="tel" class="required error" id="telephone" placeholder="3332221111" maxlength="35" />
+                    </label>
+                </div>
+                <div class="small-12 medium-12 columns"><hr></div>
             </div>
-            <div class="small-6 medium-4 large-4 columns end">
-                <label><strong>Cognome*</strong>
-                    <input type="text" class="required error" id="surname" placeholder="Cognome" maxlength="20"/>
-                </label>
+            <div class="row">
+                <div class="small-12 medium-12 large-12 columns extra-space-hero" id="privacy3">
+                    <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a id="privacy2" class="error"> privacy</a>*</label>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="small-12  medium-5 columns extra-space-hero">
-                <label><strong>Email*</strong>
-                    <input type="email" class="required email error" id="email" placeholder="esempio@esempio.it" maxlength="200"/>
-                  </label>
+            <div class="row extra-space-from-tabs">
+                <div class="small-12 medium-12 large-12 columns ">
+                    <a id="prenota" role="button" class="button right ">Riserva il Tavolo</a>
+                </div>
             </div>
-            <div class="small-6  medium-3 columns end extra-space-hero">
-                <label><strong>Telefono*</strong>
-                    <input type="tel" class="required error" id="telephone" placeholder="3332221111" maxlength="35" />
-                </label>
-            </div>
-        </div>
-        <div class="row extra-space">
-            <div class="small-12 medium-12 columns" id="privacy3">
-                <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a id="privacy2" class="error"> privacy</a></label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="small-12 medium-12 large-12 columns">
-                <a id="prenota" role="button" class="button right extra-space-from-tabs">Riserva il Tavolo</a>
-            </div>
-        </div>
-    </form>
+        </form>
     </div>
 
 <!-- inizio footer -->
