--- a/prenota/index.html
+++ b/prenota/index.html
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="small-12 medium-12 large-12 columns">
                      <h6>Includi in <strong>Quante persone*</strong> anche eventuali seggioloni. Esempio: 4 persone e 2 seggioloni seleziona 6.</h6>
-                     <h6 class><strong>* </strong> Indica un campo obbligatorio.</h6>
+                     <h6 class="extra-space-hero"><strong>* </strong> Indica un campo obbligatorio.</h6>
                 </div>
                 <div class="small-12 medium-12 columns"><hr></div>
             </div>
