--- a/prenota/index.html
+++ b/prenota/index.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="row extra-space-hero">
-                <div class="small-12 medium-6 columns end">
+                <div class="small-12 medium-6 columns end ">
                     <label><strong>Quale turno*</strong>
                 <div id="shiftGridL"></div>
                     </label>
@@ -182,7 +182,7 @@
                     </label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row extra-space-hero">
                 <div class="small-9 medium-4 columns end ">
                     <label><strong>Ho bisogno di seggioloni</strong>
                         <select name="MMERGE4" class="" id="seggiolini">
@@ -194,8 +194,8 @@
                     </label>
                 </div>
             </div>
-            <div class="row">
-                <div class="small-9 medium-6 columns end">
+            <div class="row extra-space-hero">
+                <div class="small-9 medium-6 columns end" >
                     <input id="cani" type="checkbox"><label for="checkbox1">Ho uno o più cani</label>
                 </div>
                 <div class="small-12 medium-12 columns"><hr></div>
@@ -212,7 +212,7 @@
                     </label>
                 </div>
             </div>
-            <div class="row">
+            <div class="row extra-space-hero">
                 <div class="small-12  medium-5 large-5 columns extra-space-hero">
                     <label><strong>Email*</strong>
                         <input type="email" class="required error email" id="email" placeholder="esempio@esempio.it" maxlength="200"/>
@@ -227,18 +227,17 @@
             </div>
             <div class="row">
                 <div class="small-12 medium-12 large-12 columns extra-space-hero" id="privacy3">
-                    <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a id="privacy2" class="error"> privacy</a>*</label>
+                    <input id="privacy" type="checkbox" checked><label for="checkbox2"> Accetto la<a id="privacy2" class="required error"> privacy</a>*</label>
                 </div>
             </div>
             <div class="row extra-space-from-tabs">
                 <div class="small-12 medium-12 large-12 columns ">
-                    <a id="prenota" role="button" class="button right ">Riserva il Tavolo</a>
+                    <a id="prenota" role="button" class="button right" style="margin-bottom:0.5rem; margin-top:0.3rem;">Riserva il Tavolo</a>
                 </div>
                 <br>
             </div>
         </form>
     </div>
-
 <!-- inizio footer -->
     <footer class="panel-footer">
         <div class="row">
@@ -334,7 +333,7 @@
 <div id="myModal" class="reveal-modal medium" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
     <div class="row">
         <div class="small-12 medium-12 large-12 columns extra-space" style="margin-bottom:8%">
-            <p class="lead extra-space-modal" id="modalLead">In questa data siamo al completo.</p>
+            <p class="lead extra-space" id="modalLead">In questa data siamo al completo.</p>
         </div>
     </div>
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
