--- a/prenota/index.html
+++ b/prenota/index.html
@@ -159,7 +159,7 @@
                 </div>
             </div>
             <div class="row extra-space-hero">
-                <div class="small-12 medium-6 columns end ">
+                <div class="small-12 medium-6 columns end">
                     <label><strong>Quale turno*</strong>
                 <div id="shiftGridL"></div>
                     </label>
@@ -212,7 +212,7 @@
                     </label>
                 </div>
             </div>
-            <div class="row extra-space-hero">
+            <div class="row">
                 <div class="small-12  medium-5 large-5 columns extra-space-hero">
                     <label><strong>Email*</strong>
                         <input type="email" class="required error email" id="email" placeholder="esempio@esempio.it" maxlength="200"/>
